--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     EJS_player = '#game';
     EJS_gameUrl = 'https://cdn.glitch.me/b189d138-c223-4a4a-85f8-43c7d8a03587%2FNew%20Super%20Mario%20Bros.%20(USA).nds?v=1634954172382'; // Url to Game rom
     EJS_core = 'nds';
+  EJS_gameID = 6; // ID in your website, required for netplay.
 EJS_pathtodata = 'https://burritoedition.github.io/emu/data/';
 </script>
 <script src="https://burritoedition.github.io/emu/data/loader.js"></script>
